--- a/bower.json
+++ b/bower.json
@@ -3,11 +3,18 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "semantic": "1.11.0"
+    "semantic": "~2.1.4"
   },
   "devDependencies": {
     "chai": "~3.3.0",
     "mocha": "~2.3.3"
+  },
+  "overrides" : {
+    "semantic": {
+      "main": [
+        "dist/semantic.css",
+        "dist/semantic.js"
+      ]
+    }  
   }
 }
-
